timestamp fix for RADOLAN

--- a/run.ipynb
+++ b/run.ipynb
@@ -218,6 +218,26 @@
     "        json.dump(ezg._geojson, fp)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2022, 3, 13, 12, 50)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "radolan.attributes[2]['datetime']"
+   ]
   }
  ],
  "metadata": {
