--- a/run.ipynb
+++ b/run.ipynb
@@ -169,9 +169,10 @@
     "# dirty fix, cause I am too stupid\n",
     "#EZG._dwd_request_params['period'] = observation.DwdObservationPeriod.RECENT\n",
     "#PAR = [observation.DwdObservationDataset.TEMPERATURE_AIR, observation.DwdObservationDataset.SOLAR, observation.DwdObservationDataset.WIND]\n",
-    "EZG._dwd_request_params['period'] = observation.DwdObservationPeriod.HISTORICAL\n",
+    "#EZG._dwd_request_params['period'] = observation.DwdObservationPeriod.HISTORICAL\n",
     "EZG._dwd_request_params['resolution'] = observation.DwdObservationResolution.DAILY\n",
-    "PAR = [observation.DwdObservationDataset.CLIMATE_SUMMARY]\n",
+    "PARAMETER = [observation.DwdObservationDataset.CLIMATE_SUMMARY]\n",
+    "PERIODS = [observation.DwdObservationPeriod.HISTORICAL, observation.DwdObservationPeriod.RECENT]\n",
     "\n",
     "# yippie\n",
     "for ezg in ezgs:\n",
@@ -187,22 +188,29 @@
     "    \n",
     "    # --------------\n",
     "    # DWD STATIONS\n",
-    "    for P in PAR:\n",
+    "    for P in PARAMETER:\n",
     "        EZG._dwd_request_params['parameter'] = P\n",
-    "        # load DWD station data\n",
-    "        if not ezg.get_dwd_within_ezg().df.empty:\n",
-    "            stations = ezg.get_dwd_within_ezg()\n",
-    "        elif not ezg.get_dwd_around_centroid(STATION_DISTANCE, 'km').df.empty:\n",
-    "            stations = ezg.get_dwd_around_centroid(STATION_DISTANCE, 'km')\n",
-    "        else:\n",
-    "            stations = ezg.get_dwd_by_rank(STATION_CLOSEST_N)\n",
-    "                \n",
-    "        # reduce the data\n",
-    "        station_data = transpose_station_data(stations, variables='all', omit_quality_flag=OMIT_QUALITY_FLAG,)\n",
+    "        data_cache = dict()\n",
+    "        for period in PERIODS:\n",
+    "            EZG._dwd_request_params['period'] = period\n",
+    "            # load DWD station data\n",
+    "            if not ezg.get_dwd_within_ezg().df.empty:\n",
+    "                stations = ezg.get_dwd_within_ezg()\n",
+    "            elif not ezg.get_dwd_around_centroid(STATION_DISTANCE, 'km').df.empty:\n",
+    "                stations = ezg.get_dwd_around_centroid(STATION_DISTANCE, 'km')\n",
+    "            else:\n",
+    "                stations = ezg.get_dwd_by_rank(STATION_CLOSEST_N)\n",
+    "                    \n",
+    "            # reduce the data\n",
+    "            station_data = transpose_station_data(stations, variables='all', omit_quality_flag=OMIT_QUALITY_FLAG,)\n",
     "\n",
+    "            # cache the data\n",
+    "            for param_name, df in station_data.items():\n",
+    "                data_cache[param_name] = df if param_name not in data_cache else pd.concat([data_cache[param_name], df])\n",
+    "        \n",
     "        # save the data\n",
-    "        for param_name, df in station_data.items():\n",
-    "            df.to_csv(os.path.join(OUT_DIR, name, f'{param_name}.csv'), index=True)\n",
+    "        for param_name, df in data_cache.items():\n",
+    "            df.to_csv(os.path.join(OUT_DIR, name, param_name + '.csv'), index=True)\n",
     "\n",
     "    # --------------\n",
     "    # DWD RADOLAN\n",
@@ -217,26 +225,6 @@
     "    with open(os.path.join(OUT_DIR, name, 'ezg.geojson'), 'w') as fp:\n",
     "        json.dump(ezg._geojson, fp)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2022, 3, 13, 12, 50)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "radolan.attributes[2]['datetime']"
    ]
   }
  ],
